--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,34 @@
     transform: rotate(360deg);
   }
 }
+img{
+  width: 75%;
+  height: 75%;
+  vertical-align: middle;
+}
+.carousel{
+  max-width: 1000px;
+}
+
+.carousel-container{
+  position:relative;
+  background-color: white;
+}
+
+input[type=text] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
+
+button{
+  background-color: pink;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-decoration: none;
+  margin: 4px 2px;
+  cursor: pointer;
+  widtg: 100%;
+}
